Задание 1 выполнено.
Исправлены замечания:
- Улучшена архитектура проекта
- Оптимизированы Page Objects
- Добавлены Allure аннотации
- Улучшена стабильность тестов